--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -3,11 +3,9 @@ default: &default
   encoding: utf8
   pool: 5
   host: db
-  
-  # ★★★ rootユーザーに変更し、rootパスワードを参照するよう修正 ★★★
+
   username: root 
   password: <%= ENV['MYSQL_ROOT_PASSWORD'] %>
-  # ★★★
 
 development:
   <<: *default
@@ -20,5 +18,5 @@ test:
 production:
   <<: *default
   database: hair_app_production
-  username: <%= ENV['MYSQL_USER'] %> # 本番環境はrootを使わず、専用ユーザーに戻す
-  password: <%= ENV['MYSQL_PASSWORD'] %> # 本番環境はrootを使わず、専用ユーザーに戻す
+  username: <%= ENV['MYSQL_USER'] %>
+  password: <%= ENV['MYSQL_PASSWORD'] %>
