--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -24,6 +24,10 @@ gem 'devise_token_auth'
 gem 'devise-i18n'
 
 group :development, :test do
+  gem 'rspec-rails'
+
+  gem 'database_cleaner-active_record'
+
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
 
   gem "brakeman", require: false
