--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -26,6 +26,8 @@ gem 'devise-i18n'
 group :development, :test do
   gem 'rspec-rails'
 
+  gem 'factory_bot_rails'
+  
   gem 'database_cleaner-active_record'
 
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
