--- a/.env
+++ b/.env
@@ -1,12 +1,16 @@
 # Railsコンテナ
-RAILS_PORT=3000
+RAILS_PORT=3002
 
 # Next.jsコンテナ
 NEXT_PORT=3001
 
 # MySQLコンテナ
-MYSQL_ROOT_PASSWORD=root_password      # rootのパスワード
-MYSQL_DATABASE=hair_app_development    # データベース名
-MYSQL_USER=docker_user                 # Rails用ユーザー
-MYSQL_PASSWORD=docker_password         # Rails用パスワード
+MYSQL_ROOT_PASSWORD=root_password
+MYSQL_DATABASE=hair_app_development
+MYSQL_USER=docker_user
+MYSQL_PASSWORD=docker_password
+MYSQL_HOST=db
 TZ=Asia/Tokyo
+
+# Next.js→Rails通信用（必要な場合のみ）
+API_URL=http://api:3000
